--- a/[5] 其它语言/[1] echarts/demo2_异步加载_动态图/main.html
+++ b/[5] 其它语言/[1] echarts/demo2_异步加载_动态图/main.html
@@ -38,7 +38,7 @@ myChart.setOption({
 
 // 异步加载数据
 	setInterval(function (){
-$.getJSON('d.json').done(function (data) {
+$.getJSON('data.json').done(function (data) {
     // 填入数据
 	//document.write(data)
     myChart.setOption({
